
=== Configuration changes for system administrators in 1.39 ===

==== New configuration ====

* ...

==== Changed configuration ====

* ...

==== Removed configuration ====

* ...

=== New user-facing features in 1.39 ===

* ...

=== External library changes in 1.39 ===

==== New external libraries ====

* ...

==== Changed external libraries ====

* ...

==== Removed external libraries ====

* (T12345) ...

=== Bug fixes in 1.39 ===

* (T12345) ...

=== Action API changes in 1.39 ===

* T104344: The wbsearchentities response has a new `display` field for each result. It may contain a `label` and `description` key.
Each of those will contain a `text` and a `language` key with the respective data.
The top-level `label`, `description` and `aliases` keys of each result are now considered deprecated and should no longer be used.
See also the official [https://lists.wikimedia.org/hyperkitty/list/wikidata-tech@lists.wikimedia.org/thread/3LA6FDOZGSK6HSQY73XCFNT4BTYWOY64/ significant change announcement].

* (T12345) ...

=== Languages updated in 1.39 ===

Wikibase supports over 300 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.
New monolingual support:

* (T12345) ...

Monolingual entries removed as they are now natively supported by MediaWiki:

* (T12345) ...

=== Breaking changes in 1.39 ===

* (T12345) ...

=== Deprecations in 1.39 ===

* (T12345) ...

=== Other changes in 1.39 ===

* (T12345) ...

== Online documentation ==

Installation instructions and FAQ
		https://www.mediawiki.org/wiki/Wikibase

Developer documentation of Wikibase 1.39
		https://doc.wikimedia.org/Wikibase/REL1_39/

== Mailing list ==

Discussion regarding the development of Wikidata
		https://lists.wikimedia.org/mailman/listinfo/wikidata-tech

== IRC help ==

Questions related to wikibase and wikidata can be asked in #wikidata on irc.libera.chat.