@@ -77,6 +77,10 @@ Monolingual entries removed as they are now natively supported by MediaWiki:
 
 === Deprecations in 1.39 ===
 
+* (T312222) The LanguageFallbackLabelDescriptionLookupFactory service is deprecated.
+Use the new FallbackLabelDescriptionLookupFactory service instead:
+it has a very similar interface, but returns lookups that also resolve redirects.
+
 * (T12345) ...
 
 === Other changes in 1.39 ===
